Fix : Grid gutter gaps in icon preview -s

--- a/src/components/containers/icons-display-container/icons-display-container.module.css
+++ b/src/components/containers/icons-display-container/icons-display-container.module.css
@@ -18,7 +18,7 @@
   height: 100%;
   overflow: scroll;
   overflow-x: hidden;
-  row-gap: 16px;
+  row-gap: 22px;
   width: 100%;
 }
 /* scroll bar width */
